default/objects/Products__c/Products__c.object-meta.xml
<CustomObject>
    <label>Products</label>
    <nameField>
        <displayFormat>B -{00000}</displayFormat>
        <label>Baremos Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>