default/objects/Products__c/fields/AdditionalNotes__c.field-meta.xml
<CustomField>
    <fullName>AdditionalNotes__c</fullName>
    <label>Additional Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>