default/objects/Products__c/fields/Coverage__c.field-meta.xml
<CustomField>
    <fullName>Coverage__c</fullName>
    <label>Coverage</label>
    <type>TextArea</type>
</CustomField>