default/objects/Products__c/fields/IdOrder__c.field-meta.xml
<CustomField>
    <fullName>IdOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Id Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipName>Baremos</relationshipName>
    <type>Lookup</type>
</CustomField>