default/objects/Products__c/fields/InvolvedParty__c.field-meta.xml
<CustomField>
    <fullName>InvolvedParty__c</fullName>
    <label>Involved Party</label>
    <length>50</length>
    <type>Text</type>
</CustomField>