default/objects/Products__c/fields/Observations__c.field-meta.xml
<CustomField>
    <fullName>Observations__c</fullName>
    <label>Observations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>