default/objects/Products__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <label>Room</label>
    <type>TextArea</type>
</CustomField>