default/objects/Products__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DR</fullName>
                <label>Draft</label>
            </value>
            <value>
                <fullName>PA</fullName>
                <label>Pending Authorization</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>Accepted</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Refused</label>
            </value>
            <value>
                <fullName>DE</fullName>
                <label>Denied</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>Invoiced</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>