default/objects/Products__c/fields/Unitsm__c.field-meta.xml
<CustomField>
    <fullName>Unitsm__c</fullName>
    <label>Units / m²</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>