default/objects/Products__c/fields/VatAmount__c.field-meta.xml
<CustomField>
    <fullName>VatAmount__c</fullName>
    <label>Vat Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>