default/objects/Products__c/fields/Warranty__c.field-meta.xml
<CustomField>
    <fullName>Warranty__c</fullName>
    <label>Warranty</label>
    <type>TextArea</type>
</CustomField>